--- a/Image_Captioner.ipynb
+++ b/Image_Captioner.ipynb
@@ -2195,7 +2195,7 @@
       "source": [
         "# Loading saved model for further training\n",
         "decoder = LSTMDecoder(embedding_dim, 512, 2048, vocab_size, embedding_matrix, lr=0.001)\n",
-        "decoder.load_model(\"/content/drive/MyDrive/datasets/flickr8k/flickr8k/saved_models/best_model5.npz\")\n",
+        "decoder.load_model(\"/content/drive/MyDrive/datasets/flickr8k/flickr8k/saved_models/best_model7.npz\")\n",
         "\n"
       ],
       "metadata": {
@@ -2203,15 +2203,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vPTQp8Cx6eui",
-        "outputId": "8200a306-8b79-4e7d-cf97-616e4cd8f99c"
+        "outputId": "8679b57b-71b5-4369-dd19-8995afd299de"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model loaded from /content/drive/MyDrive/datasets/flickr8k/flickr8k/saved_models/best_model5.npz\n"
+            "Model loaded from /content/drive/MyDrive/datasets/flickr8k/flickr8k/saved_models/best_model7.npz\n"
           ]
         }
       ]
@@ -2283,16 +2283,10 @@
         "    if (i + 1) % 100 == 0:\n",
         "        print(f\"Generated {i+1}/{len(test_features)} captions...\")\n",
         "\n",
-        "print(f\"✓ Generated all {len(generated_captions)} captions\")\n",
-        "\n",
-        "print(\"\\n\" + \"=\"*70)\n",
-        "print(\"SAMPLE GENERATED CAPTIONS\")\n",
-        "print(\"=\"*70)\n",
         "\n",
         "for i in range(10):\n",
         "    print(f\"\\nImage {i+1}:\")\n",
         "    print(f\"  Generated: {generated_captions[i]}\")\n",
-        "    print(\"-\" * 70)\n",
         "\n"
       ],
       "metadata": {
@@ -2300,9 +2294,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jdYQHTCMNSJc",
-        "outputId": "a496efbf-6c3e-4a55-a852-b2d06daf4bfb"
+        "outputId": "904cf7fa-af81-45f2-e293-ddd9fdf1fe88"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -2316,51 +2310,36 @@
             "Generated 600/810 captions...\n",
             "Generated 700/810 captions...\n",
             "Generated 800/810 captions...\n",
-            "✓ Generated all 810 captions\n",
-            "\n",
-            "======================================================================\n",
-            "SAMPLE GENERATED CAPTIONS\n",
-            "======================================================================\n",
             "\n",
             "Image 1:\n",
             "  Generated: a woman in a black shirt is standing on a bench in front of a building\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 2:\n",
             "  Generated: a black dog is running through the grass\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 3:\n",
             "  Generated: a boy in a red shirt is jumping down a wooden wall\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 4:\n",
             "  Generated: a dog is running through a grassy area\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 5:\n",
             "  Generated: a person in a boat is standing on a rocky beach\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 6:\n",
             "  Generated: a black dog is running through the snow\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 7:\n",
             "  Generated: a man in a black shirt is standing on a mountain\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 8:\n",
             "  Generated: a man in a black shirt is climbing a rock\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 9:\n",
             "  Generated: a girl in a red shirt is standing in a <unk>\n",
-            "----------------------------------------------------------------------\n",
             "\n",
             "Image 10:\n",
-            "  Generated: a person in a red jacket is standing on a mountain\n",
-            "----------------------------------------------------------------------\n"
+            "  Generated: a person in a red jacket is standing on a mountain\n"
           ]
         }
       ]
@@ -2420,7 +2399,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1hmL_z71vD_MgoIEkwB6ngj8v8gN2vINx",
-      "authorship_tag": "ABX9TyOudCLmUcLpUCvBll7I2aaK",
+      "authorship_tag": "ABX9TyM6MEUAD18gv3IupMb4/9g5",
       "include_colab_link": true
     },
     "kernelspec": {
