--- a/Image_Captioner.ipynb
+++ b/Image_Captioner.ipynb
@@ -2134,7 +2134,7 @@
         "    if avg_val_loss < best_val_loss:\n",
         "        best_val_loss = avg_val_loss\n",
         "        decoder.save_model(f'/content/drive/MyDrive/datasets/flickr8k/flickr8k/saved_models/best_model{count}.npz')\n",
-        "        print(f\"  ✓ Best model saved! (Val Loss: {avg_val_loss:.4f})\")\n",
+        "        print(f\" Best model saved! (Val Loss: {avg_val_loss:.4f})\")\n",
         "        count+=1\n",
         "\n",
         "print(\"\\n\" + \"=\" * 70)\n",
@@ -2205,7 +2205,7 @@
         "id": "vPTQp8Cx6eui",
         "outputId": "8679b57b-71b5-4369-dd19-8995afd299de"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,7 +2296,7 @@
         "id": "jdYQHTCMNSJc",
         "outputId": "904cf7fa-af81-45f2-e293-ddd9fdf1fe88"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2399,7 +2399,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1hmL_z71vD_MgoIEkwB6ngj8v8gN2vINx",
-      "authorship_tag": "ABX9TyM6MEUAD18gv3IupMb4/9g5",
+      "authorship_tag": "ABX9TyP6Z5gcDBKdMqFX6ETgWS9m",
       "include_colab_link": true
     },
     "kernelspec": {
